# bluetooth-battery-monitor

./: .clippy.toml  .editorconfig  .gitignore  .prettierrc.cjs  .prettierrc.js  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  biome.jsonc  bundle.ts  cspell.json  cspell.jsonc  deno.jsonc  import_map.json  package-lock.json  package.json  readme.md  tailwind.config.js  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml
.github/PULL_REQUEST_TEMPLATE/: new-feature.yaml
.github/workflows/: lint-and-test.yaml  release-gui.yaml  release.yaml
assets/: default_settings.toml
crates/bluetooth/: Cargo.toml
crates/bluetooth/scripts/: get-bluetooth-battery-all.ps1  get-bluetooth-battery.ps1
crates/bluetooth/src/: error.rs  errors.rs  lib.rs  serde_with_date.rs  utils.rs
crates/bluetooth/src/categories/: category.rs  errors.rs  mod.rs  sub_category.rs
crates/bluetooth/src/device/: device_info.rs  mod.rs
crates/bluetooth/src/device/win/: battery.rs  device_searcher.rs  mod.rs  register.rs  watch.rs
crates/bluetooth/src/device/windows/: address_parser.rs  battery.rs  device_searcher.rs  inspect.rs  mod.rs  watch.rs
crates/bluetooth/src/device/windows/device_info/: buffer.rs  dev_prop.rs  device_instance.rs  mod.rs
crates/bluetooth/src/device/windows/device_info/buffer/: errors.rs  mod.rs
crates/bluetooth/src/device/windows/inspect/: errors.rs  impls.rs  mod.rs
crates/timer/: Cargo.toml
crates/timer/src/: lib.rs
gui/backend/: Cargo.toml  build.rs  readme.md  tauri.conf.json
gui/backend/capabilities/: desktop.json  main.json
gui/backend/fonts/: readme.md
gui/backend/icons/: icon.drawio  icon.icns  readme.md
gui/backend/icons/battery/: battery.drawio
gui/backend/src/: error.rs  log.rs  main.rs
gui/backend/src/cmd/: battery_reporter.rs  bluetooth_info_cache.rs  config.rs  device_watcher.rs  interval.rs  mod.rs  system_tray.rs
gui/backend/src/cmd/supports/: icon.rs  logger.rs  mod.rs  notify.rs  system_tray.rs
gui/backend/src/setup/: battery_reporter.rs  logger.rs  mod.rs  system_tray.rs  tray_menu.rs  window_event.rs
gui/frontend/: .eslintrc.cjs  .gitignore  global.d.ts  next.config.js  readme.md  tsconfig.json  vitest.setup.mts
gui/frontend/src/@types/: monaco-vim.d.ts
gui/frontend/src/app/: client_layout.tsx  globals.css  layout.tsx  page.tsx
gui/frontend/src/app/settings/: page.tsx
gui/frontend/src/backend_api/: backend_config.ts  backup.ts  bluetooth_finder.ts  default_api_wrapper.ts  device_listener.ts  index.ts  lang.ts  log.ts  progress_listener.ts  sys_tray.ts
gui/frontend/src/components/: navigation.tsx
gui/frontend/src/components/atoms/CircularWithLabel/: index.tsx
gui/frontend/src/components/atoms/ConvertButton/: ConvertButton.tsx  index.tsx
gui/frontend/src/components/atoms/Help/: Help.test.tsx  Help.tsx
gui/frontend/src/components/bt_devices/: config.tsx  device.tsx  devices.tsx  update_interval.tsx
gui/frontend/src/components/buttons/: backup_btn.tsx  exec_js_btn.tsx  import_lang_btn.tsx  index.ts  log_btn.tsx  path_selector.tsx  update_btn.tsx
gui/frontend/src/components/editor/: atom_onedark_pro.ts  code_editor.tsx  editor.tsx  index.ts
gui/frontend/src/components/hooks/: useRelativeTime.ts  useTranslation.ts
gui/frontend/src/components/hooks/useDebounce/: useDebounce.test.ts  useDebounce.ts
gui/frontend/src/components/hooks/useInjectCss/: index.ts  useInjectCss.test.tsx  (+1 more)
gui/frontend/src/components/lists/: editor_list.tsx  index.ts  log_level_list.tsx  notice_position_list.tsx  style_list.tsx  translation_list.tsx
gui/frontend/src/components/meta/: meta.ts
gui/frontend/src/components/notifications/: circular_with_label.tsx  dialog.tsx  index.ts  notify.tsx  progress_bar.tsx
gui/frontend/src/components/pages/: home.tsx  loading.tsx  settings.tsx
gui/frontend/src/components/providers/: CssProvider.tsx  EditorModeProvider.tsx  JsProvider.tsx  LogLevelProvider.tsx  NotifyProvider.tsx  TabProvider.tsx  index.tsx  snackbar.tsx
gui/frontend/src/hooks/: dyn_style.ts  index.test.ts  index.ts  storage_state.ts  useLocale.ts
gui/frontend/src/lib/css/: index.ts
gui/frontend/src/lib/editor-mode/: index.ts
gui/frontend/src/lib/i18n/: index.ts
gui/frontend/src/lib/notify/: config.test.ts  config.ts  index.ts  schema.ts
gui/frontend/src/lib/object-utils/: index.test.ts  index.ts
gui/frontend/src/lib/storage/: cacheKeys.ts  index.ts  schemaStorage.ts  storage.test.ts  storage.ts  types.ts
gui/frontend/src/lib/zod/: json-validation.ts  schema-utils.ts
gui/frontend/src/services/: readme.md
gui/frontend/src/services/api/: backend_config.ts  backup.ts  bluetooth_config.ts  bluetooth_finder.ts  device_listener.ts  dialog.ts  fs.ts  lang.ts  log.ts  patch.ts  shell.ts  sys_tray.ts  window.ts
gui/frontend/src/utils/: local_storage_manager.ts  path.test.ts  path.ts  selector.ts  styles.ts  translation.ts
locales/: en-US.json  ja-JP.json  ko-KR.json  readme.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/icons/battery/: License.txt
src-tauri/scripts/: get-bluetooth-battery-all.ps1  get-bluetooth-battery.ps1
src-tauri/src/: main.rs  setup.rs  system_tray.rs  window_menu.rs
src-tauri/src/bluetooth/: common.rs  mod.rs  windows.rs
src-tauri/src/commands/: mod.rs  notify.rs  storage.rs  timer.rs
src-tauri/src/commands/bluetooth/: mod.rs  windows.rs
src-tauri/src/commands/fs/: bincode.rs  mod.rs  settings.rs
src-tauri/src/utils/: json.rs  mod.rs  string_changer.rs
tools/: version_up.cjs  version_up.js
www/: App.tsx  global.css  index.html  index.tsx
www/commands/: auto-start.ts  bluetooth.ts  storage.ts  timer.ts
www/commands/fs/: settings.ts
www/components/: button.tsx  form.tsx  switch.tsx
www/components/general-ui/: switch.tsx
www/components/hooks/: useDebounce.ts
www/components/pages/: Home.tsx  Settings.tsx  index.ts
www/components/ui/: autostart-switch.tsx  css-text.tsx  form.tsx  reactive-button.tsx  switch.tsx
(+85 files in other folders)
