[package]
name = "bluetooth-battery-monitor"
version = "0.1.0"
description = "Deno + Tauri app"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
bincode = { version = "1.3.3" }
once_cell = { version = "1.17.1" }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = { version = "1.0.95" }
tauri = { version = "1.2.4", features = ["api-all", "icon-ico", "icon-png", "system-tray"] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tokio = { version = "1.27.0", features = ["time", "sync"] }
windows = { version = "0.48.0", features = [
  "Win32_System_Rpc",
  "Win32_Networking_WinSock",
  "Win32_Devices_Bluetooth",
  "Win32_Foundation",
  "Devices_Bluetooth_Rfcomm",
  "Foundation",
  "Devices_Enumeration",
  "Foundation_Collections",
  "Networking_Proximity",
] }

[dev-dependencies]
tokio = { version = "1.27.0", features = ["time", "macros", "rt"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
