[package]
name = "bluetooth"
version.workspace = true
description = "Bluetooth"
authors = ["SARDONYX-sard"]
readme = "./readme.md"
license = "MIT OR Apache-2.0"
repository.workspace = true
edition = "2021"
rust-version = "1.70"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["json", "tracing"]
tracing = ["dep:tracing"]
serde = ["dep:serde", "dep:serde_with"]
json = ["serde", "dep:serde_json"]

[dependencies]
chrono = "0.4.38"
num-derive = "0.4"
num-traits = "0.2"
parse-display = "0.9.1" # Display derive
serde = { version = "1.0.204", features = [
  "derive",
], optional = true } # Implement (De)Serializer
serde_with = { version = "3.9.0", optional = true }
serde_json = { version = "1.0.120", optional = true } # Json converter
snafu = "0.8.3" # Define errors
tracing = { version = "0.1.40", optional = true } # Logger

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
  "Devices_Bluetooth_Rfcomm",
  "Devices_Enumeration",
  "Foundation",
  "Foundation_Collections",
  "Win32_Devices_Bluetooth",
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_System_Rpc",
  "Win32_System_Threading",
  "Win32_System_Registry",
] }


[dev-dependencies]
pretty_assertions = "1.4.0"
quick_tracing = { version = "0.1.5", features = ["derive"] }
