[package]
name = "bluetooth"
version.workspace = true
description = "Bluetooth"
authors = ["SARDONYX-sard"]
readme = "./readme.md"
license = "MIT OR Apache-2.0"
repository.workspace = true
edition = "2021"
rust-version = "1.80"
keywords.workspace = true
categories = ["bluetooth"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["serde", "tracing"]
tracing = ["dep:tracing"]
serde = ["dep:serde", "dep:serde_with", "dashmap/serde"]

[dependencies]
chrono = { workspace = true, features = ["serde"] }
dashmap = { workspace = true }
num-derive = "0.4.2"
num-traits = "0.2.19"
parse-display = { workspace = true }                 # Display derive
serde = { workspace = true, optional = true }        # Implement (De)Serializer
serde_with = { version = "3.12.0", optional = true }
snafu = { workspace = true }
tracing = { workspace = true, optional = true }      # Logger
winnow = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-collections = "0.2.0"
windows-future = "0.2.0"
windows = { version = "0.61.1", features = [
  "Devices_Bluetooth_Rfcomm",
  "Devices_Enumeration",
  "Foundation_Collections",
  "System",
  "Wdk_Devices",
  "Wdk_Devices_Bluetooth",
  "Win32_Devices_Bluetooth",
  "Win32_Devices_DeviceAndDriverInstallation",
  "Win32_Devices_Properties",
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Registry",
  "Win32_System_Rpc",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }


[dev-dependencies]
pretty_assertions = { workspace = true }
quick_tracing = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
