[package]
name = "timer"
version.workspace = true
description = "JavaScript like timer."
authors = ["SARDONYX-sard"]
readme = "./readme.md"
license = "MIT OR Apache-2.0"
repository.workspace = true
edition = "2021"
rust-version = "1.70"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dashmap = "5.5.3"                                           # Concurrent Hashmap
once_cell = { workspace = true }
snafu = { workspace = true }                                # Define errors
tokio = { version = "1.38.0", features = ["time", "sync"] }


[dev-dependencies]
pretty_assertions = { workspace = true }
quick_tracing = { workspace = true }
tokio = { version = "1.38.0", features = ["time", "macros", "rt"] }
tracing = { workspace = true }                                      # Logger
