[package]
name = "timer"
version = "0.4.3"
description = "JavaScript like timer."
authors = ["SARDONYX-sard"]
readme = "./readme.md"
license = "MIT OR Apache-2.0"
repository.workspace = true
edition = "2021"
rust-version = "1.70"
keywords.workspace = true
categories = ["time"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dashmap = { workspace = true }                            # Concurrent Hashmap
once_cell = { workspace = true }
snafu = { workspace = true }                              # Define errors
tokio = { workspace = true, features = ["time", "sync"] }


[dev-dependencies]
pretty_assertions = { workspace = true }
quick_tracing = { workspace = true }
tokio = { workspace = true, features = ["time", "macros", "rt"] }
tracing = { workspace = true }                                    # Logger

[lints]
workspace = true
