[package]
name = "bluetooth_battery_monitor_gui"
version.workspace = true
description = "Bluetooth battery monitor GUI"
authors = ["SARDONYX-sard"]
readme = "./readme.md"
license = "MIT OR Apache-2.0"
repository.workspace = true
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
bluetooth = { path = "../../crates/bluetooth", features = ["tracing"] }
once_cell = "1.19.0"
serde = { version = "1.0.204", features = [
  "derive",
] } # Implement (De)Serializer
serde_json = { version = "1.0.120" } # Json converter
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
# There is a bug that the window is displayed in the upper state when using a plugin(`tauri-plugin-window-state`) that saves the state.
# see: https://github.com/tauri-apps/tauri/issues/7669#issuecomment-2068731069
tauri = { version = "1.7.1", features = [
  "devtools",
  "dialog-open",
  "dialog-save",
  "fs-all",
  "icon-ico",
  "icon-png",
  "notification-all",
  "path-all",
  "shell-all",
  "system-tray",
] } # For GUI
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
timer = { path = "../../crates/timer" }

[dev-dependencies]
pretty_assertions = "1.4.0"
temp-dir = "0.1.13"
tracing-appender = "0.2.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
