[package]
name = "bluetooth_battery_monitor"
version.workspace = true
description = "Bluetooth battery monitor GUI"
authors = ["SARDONYX-sard"]
readme = "./readme.md"
license = "MIT OR Apache-2.0"
repository.workspace = true
edition = "2021"
rust-version = "1.60"
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
chrono = { workspace = true }
once_cell = { workspace = true }
parse-display = { workspace = true }      # Display derive
rayon = { workspace = true }
serde = { workspace = true }              # Implement (De)Serializer
serde_json = { workspace = true }         # To avoid generate_context error.
snafu = { workspace = true }              # Implement error types
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# GUI: https://github.com/tauri-apps/plugins-workspace
tauri = { version = "2.1.1", features = [
  "devtools",
  "image-ico",
  "image-png",
  "tray-icon",
] }
tauri-plugin-autostart = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-notification = "2.2.1"
tauri-plugin-shell = "2.2.0"
tauri-plugin-window-state = "2.2.0"

# workspace members
bluetooth = { workspace = true, features = ["tracing"] }
timer = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
temp-dir = "0.1.13"
tracing-appender = "0.2.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lints]
workspace = true
